source/taos-community/include/client/taos.h

typedef void   TAOS;
typedef void   TAOS_RES;
typedef void **TAOS_ROW;
typedef enum {
  TSDB_OPTION_CONNECTION_CLEAR = -1,     // means clear all option in this connection
  TSDB_OPTION_CONNECTION_CHARSET,        // charset, Same as the scope supported by the system
  TSDB_OPTION_CONNECTION_TIMEZONE,       // timezone, Same as the scope supported by the system
  TSDB_OPTION_CONNECTION_USER_IP,        // user ip
  TSDB_OPTION_CONNECTION_USER_APP,       // user app, max lengthe is 23, truncated if longer than 23
  TSDB_OPTION_CONNECTION_CONNECTOR_INFO, // connector info, max lengthe is 255, truncated if longer than 255
  TSDB_MAX_OPTIONS_CONNECTION
} TSDB_OPTION_CONNECTION;
#define DLL_EXPORT __declspec(dllexport)
#define DLL_EXPORT
DLL_EXPORT int   taos_options_connection(TAOS *taos, TSDB_OPTION_CONNECTION option, const void *arg, ...);
DLL_EXPORT bool taos_is_null(TAOS_RES *res, int32_t row, int32_t col);
DLL_EXPORT int  taos_fetch_block(TAOS_RES *res, TAOS_ROW *rows);
DLL_EXPORT int  taos_fetch_raw_block(TAOS_RES *res, int *numOfRows, void **pData);
DLL_EXPORT int *taos_get_column_data_offset(TAOS_RES *res, int columnIndex);
DLL_EXPORT void taos_reset_current_db(TAOS *taos);
DLL_EXPORT TAOS_ROW *taos_result_block(TAOS_RES *res);
DLL_EXPORT const char *taos_get_server_info(TAOS *taos);
DLL_EXPORT const char *taos_get_client_info();
/* --------------------------TMQ INTERFACE------------------------------- */

typedef struct tmq_t      tmq_t;
typedef void(tmq_commit_cb(tmq_t *tmq, int32_t code, void *param));
/* ---- end ---- */

/* -- implemented in the native interface, for internal component only, the API may change -- */
typedef enum {
  TSDB_SRV_STATUS_UNAVAILABLE = 0,
  TSDB_SRV_STATUS_NETWORK_OK = 1,
  TSDB_SRV_STATUS_SERVICE_OK = 2,
  TSDB_SRV_STATUS_SERVICE_DEGRADED = 3,
  TSDB_SRV_STATUS_EXTING = 4,
} TSDB_SERVER_STATUS;
DLL_EXPORT TSDB_SERVER_STATUS taos_check_server_status(const char *fqdn, int port, char *details, int maxlen);