src/Driver/Impl/NativeMethods/NativeMethods.cs


        public static int ValidateSQL(IntPtr taos, string sql)
        {
            UTF8PtrStruct utf8PtrStruct = new UTF8PtrStruct(sql);
            int code = _ValidateSQL(taos, utf8PtrStruct.utf8Ptr);
            utf8PtrStruct.UTF8FreePtr();
            return code;
        }

        // void taos_reset_current_db(TAOS *taos);
        [DllImport(DLLName, EntryPoint = "taos_reset_current_db", CallingConvention = CallingConvention.Cdecl)]
        public static extern void ResetCurrentDatabase(IntPtr taos);

        // TAOS_ROW *taos_result_block(TAOS_RES *res);

        // char *taos_get_server_info(TAOS *taos);
        [DllImport(DLLName, EntryPoint = "taos_get_server_info", CallingConvention = CallingConvention.Cdecl)]
        private static extern IntPtr _GetServerInfo(IntPtr taos);

        public static string GetServerInfo(IntPtr taos)
        {
            IntPtr serverInfoPtr = _GetServerInfo(taos);
            return StringHelper.PtrToStringUTF8(serverInfoPtr);
        }

        // char *taos_get_client_info();
        [DllImport(DLLName, EntryPoint = "taos_get_client_info", CallingConvention = CallingConvention.Cdecl)]
        private static extern IntPtr _GetClientInfo();

        public static string GetClientInfo()
        {
            IntPtr clientInfoPtr = _GetClientInfo();
            return StringHelper.PtrToStringUTF8(clientInfoPtr);
        }

        // ====================== 3.0 =====================
        //bool taos_is_null(TAOS_RES *res, int32_t row, int32_t col);
        [DllImport(DLLName, EntryPoint = "taos_is_null", CallingConvention = CallingConvention.Cdecl)]
        public static extern bool IsNull(IntPtr res, Int32 row, Int32 col);

        //int taos_fetch_block(TAOS_RES *res, TAOS_ROW *rows)
        [DllImport(DLLName, EntryPoint = "taos_fetch_block", CallingConvention = CallingConvention.Cdecl)]
        public static extern int FetchBlock(IntPtr res, IntPtr rows);

        //int taos_fetch_raw_block(TAOS_RES *res, int* numOfRows, void** pData);
        [DllImport(DLLName, EntryPoint = "taos_fetch_raw_block", CallingConvention = CallingConvention.Cdecl)]
        public static extern int FetchRawBlock(IntPtr res, IntPtr numOfRows, IntPtr pData);

        //int* taos_get_column_data_offset(TAOS_RES *res, int columnIndex);
        [DllImport(DLLName, EntryPoint = "taos_get_column_data_offset", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr GetColDataOffset(IntPtr res, int columnIndex);

        // TSDB_SERVER_STATUS taos_check_server_status(const char *fqdn, int port, char *details, int maxlen);
        [DllImport(DLLName, EntryPoint = "taos_check_server_status", CallingConvention = CallingConvention.Cdecl)]
        private static extern int _CheckServerStatus(IntPtr fqdn, int port, string detail, int maxlength);

        public static int CheckServerStatus(string fqdn, int port, string detail, int maxlength)
        {
            UTF8PtrStruct utf8PtrStruct = new UTF8PtrStruct(fqdn);
            try
            {
                return _CheckServerStatus(utf8PtrStruct.utf8Ptr, port, detail, maxlength);
            }
            finally
            {
                utf8PtrStruct.UTF8FreePtr();
            }
        }
        // DLL_EXPORT int   taos_options_connection(TAOS *taos, TSDB_OPTION_CONNECTION option, const void *arg, ...);
        [DllImport(DLLName, EntryPoint = "taos_options_connection", CallingConvention = CallingConvention.Cdecl)]
        private static extern int OptionsConnection(IntPtr res, int option, IntPtr arg);

        public static int OptionsConnection(IntPtr res, int option, string arg)
        {
            UTF8PtrStruct utf8PtrStruct = new UTF8PtrStruct(arg);
            try
            {
                return OptionsConnection(res, option, utf8PtrStruct.utf8Ptr);
            }
            finally
            {
                utf8PtrStruct.UTF8FreePtr();
            }
        }
        
        public static int CleanOptionsConnection(IntPtr res, int option)
        {
            // This is a workaround for the taos_options_connection function
            // that does not support cleaning options.
            return OptionsConnection(res, option, IntPtr.Zero);
        }
    }
}